--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
   },
   "dependencies": {
     "react": "^16.3.0-alpha.1",
-    "react-native": "0.54.2"
+    "react-native": "0.54.2",
+    "react-native-material-textfield": "^0.12.0",
+    "react-native-navigation": "^1.1.425",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-api-middleware": "^2.3.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "seamless-immutable": "^7.1.3"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
