--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "redux-api-middleware": "^2.3.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "seamless-immutable": "^7.1.3"
+    "seamless-immutable": "^7.1.3",
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
