--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.2",
+    "react-native-actionsheet": "^2.4.1",
     "react-native-background-upload": "^4.4.0",
     "react-native-camera-kit": "^5.3.30",
     "react-native-gestures": "github:assertchris/react-native-gestures#refactor",
