--- a/package.json
+++ b/package.json
@@ -7,17 +7,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@remobile/react-native-toast": "^1.0.7",
+    "add": "^2.0.6",
+    "prop-types": "^15.6.1",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.2",
+    "react-native-background-upload": "^4.4.0",
+    "react-native-camera-kit": "^5.3.30",
+    "react-native-gestures": "github:assertchris/react-native-gestures#refactor",
+    "react-native-image-resizer": "^1.0.0",
     "react-native-material-textfield": "^0.12.0",
     "react-native-navigation": "^1.1.425",
+    "react-native-prompt": "github:hamxabaig/react-native-prompt#master",
+    "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-api-middleware": "^2.3.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "seamless-immutable": "^7.1.3",
-    "validator": "^9.4.1"
+    "validator": "^9.4.1",
+    "yarn": "^1.5.1"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
