--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-native-actionsheet": "^2.4.1",
     "react-native-background-upload": "^4.4.0",
     "react-native-camera-kit": "^5.3.30",
+    "react-native-circular-progress": "^0.2.0",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-gestures": "github:assertchris/react-native-gestures#refactor",
     "react-native-image-resizer": "^1.0.0",
     "react-native-material-textfield": "^0.12.0",
