--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-material-textfield": "^0.12.0",
     "react-native-navigation": "^1.1.425",
     "react-native-prompt": "github:hamxabaig/react-native-prompt#master",
+    "react-native-safari-view": "^2.1.0",
     "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
